--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ requests-toolbelt==1.0.0
 rsa==4.9.1
 sniffio==1.3.1
 SQLAlchemy==2.0.41
+psycopg2-binary==2.9.9
 tenacity==9.1.2
 typing-inspect==0.9.0
 typing-inspection==0.4.1
