--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.12.14
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==4.0.3
 attrs==25.3.0
 cachetools==5.5.2
 certifi==2025.7.9
@@ -10,6 +11,8 @@ charset-normalizer==3.4.2
 customtkinter==5.2.2
 darkdetect==0.8.0
 dataclasses-json==0.6.7
+dotenv==0.9.9
+exceptiongroup==1.3.0
 filetype==1.2.0
 frozenlist==1.7.0
 google-ai-generativelanguage==0.6.18
@@ -42,7 +45,7 @@ marshmallow==3.26.1
 mdurl==0.1.2
 multidict==6.6.3
 mypy_extensions==1.1.0
-numpy==2.3.1
+numpy==2.2.6
 orjson==3.10.18
 ormsgpack==1.10.0
 packaging==24.2
@@ -50,6 +53,7 @@ pillow==11.3.0
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.31.1
+psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
@@ -64,7 +68,6 @@ requests-toolbelt==1.0.0
 rsa==4.9.1
 sniffio==1.3.1
 SQLAlchemy==2.0.41
-psycopg2-binary==2.9.9
 tenacity==9.1.2
 typing-inspect==0.9.0
 typing-inspection==0.4.1
