--- a/requirements.txt
+++ b/requirements.txt
@@ -73,3 +73,158 @@ urllib3==2.5.0
 xxhash==3.5.0
 yarl==1.20.1
 zstandard==0.23.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+altair==5.5.0
+altex==0.2.0
+annotated-types==0.7.0
+anyio==4.9.0
+asn1crypto==1.5.1
+attrs==25.3.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+boto3==1.40.11
+botocore==1.40.11
+cachetools==5.5.2
+certifi==2025.7.9
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpickle==3.0.0
+colorama==0.4.6
+contourpy==1.3.3
+cryptography==45.0.6
+customtkinter==5.2.2
+cycler==0.12.1
+darkdetect==0.8.0
+dataclasses-json==0.6.7
+entrypoints==0.4
+faker==37.5.3
+favicon==0.7.0
+filelock==3.19.1
+filetype==1.2.0
+fonttools==4.59.1
+frozenlist==1.7.0
+gitdb==4.0.12
+gitpython==3.1.45
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.1
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.73.1
+grpcio-status==1.73.1
+h11==0.16.0
+htbuilder==0.9.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.1
+idna==3.10
+jinja2==3.1.6
+jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.9
+langchain==0.3.26
+langchain-community==0.3.27
+langchain-core==0.3.68
+langchain-google-genai==2.1.7
+langchain-text-splitters==0.3.8
+langgraph==0.5.2
+langgraph-checkpoint==2.1.0
+langgraph-prebuilt==0.5.2
+langgraph-sdk==0.1.72
+langsmith==0.4.5
+lxml==6.0.0
+markdown==3.8.2
+markdown-it-py==3.0.0
+markdown-pdf==1.7
+markdownlit==0.0.7
+markupsafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.5
+mdurl==0.1.2
+multidict==6.6.3
+mypy-extensions==1.1.0
+narwhals==2.1.2
+numpy==2.3.1
+orjson==3.10.18
+ormsgpack==1.10.0
+packaging==24.2
+pandas==2.3.1
+pillow==11.3.0
+pip==25.0.1
+platformdirs==4.3.8
+plotly==6.3.0
+prometheus-client==0.22.1
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.29.5
+psycopg2-binary==2.9.9
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pycparser==2.22
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydantic-settings==2.10.1
+pydeck==0.9.1
+pyjwt==2.10.1
+pymdown-extensions==10.16.1
+pymupdf==1.25.3
+pyopenssl==25.1.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+pyyaml==6.0.2
+referencing==0.36.2
+reportlab==4.4.2
+requests==2.32.4
+requests-toolbelt==1.0.0
+rpds-py==0.27.0
+rsa==4.9.1
+s3transfer==0.13.1
+setuptools==78.1.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+snowflake-connector-python==3.17.1
+snowflake-snowpark-python==1.36.0
+sortedcontainers==2.4.0
+soupsieve==2.7
+sqlalchemy==2.0.41
+st-annotated-text==4.0.2
+st-theme==1.2.3
+streamlit==1.48.1
+streamlit-avatar==0.1.3
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.2
+streamlit-embedcode==0.1.2
+streamlit-extras==0.7.6
+streamlit-faker==0.0.4
+streamlit-image-coordinates==0.4.0
+streamlit-keyup==0.3.0
+streamlit-notify==0.3.1
+streamlit-shadcn-ui==0.1.18
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
+tenacity==9.1.2
+toml==0.10.2
+tomlkit==0.13.3
+tornado==6.5.2
+typing-extensions==4.14.1
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+validators==0.35.0
+watchdog==6.0.0
+wheel==0.45.1
+xxhash==3.5.0
+yarl==1.20.1
+zstandard==0.23.0
